--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
+    "glob-promise": "^6.0.5",
     "nodemon": "^3.0.1",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5"
