--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/voice": "^0.16.1",
-    "discord-player": "^6.6.6",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "glob-promise": "^6.0.5",
-    "nodemon": "^3.0.1",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "nodemon": "^3.0.1"
   }
 }
